--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body
     margin-top: 30px;
     margin-bottom: 50px;
     border-radius: 8px;
-    font-family: 'calibri';
+    font-family: calibri;
     color: white;
     box-shadow: 7px 13px 37px #000;
     text-align: center;
@@ -32,39 +32,39 @@ body
     margin-bottom: 15px;
 }
 
-
-.form-register .controls{
-    align-content: center;
+.form-register h4 
+{
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: -15px;
 }
 
+.radios{
+    margin: 10px;
+    transform: scale(1.2);
+}
 
-.form-register p 
+.controls 
 {
-    height: 40px;
-    text-align: center;
+    width: 15%;
+    padding: 0px;
+    background: #24303c;
+    border-radius: 3px;
+    border: 1px solid #1f53c5;
+    font-family: 'calibri';
     font-size: 18px;
-    line-height: 40px;
-}
-
-.form-register a 
-{
     color: white;
-    text-decoration: none;
+    margin-bottom: 10px;
+    margin: 7px;
 }
 
-.form-register a:hover 
+.check
 {
-    color: white;
-    text-decoration: underline;
+    
+    margin: 10px;
+    transform: scale(1.2);
 }
 
-.registroExitoso
-{
-    text-align: center;
-    color: aliceblue;
-    padding-top: 10rem;
-    font-size: 30px;
-}
 
 .terminos
 {
@@ -75,13 +75,22 @@ body
     font-size: 30px;
 }
 
+.btn {
+    font-weight:bolder;
+}
+
+.btn:hover{
+    color: #FFF;
+}
+
 footer 
 {
+    font-family: calibri;
+    font-size: small;
+    color: #FFF;
     background-color: rgba(0, 0, 0, 0.445);
     padding: 10px;
-    color: #FFF;
     margin-top: 1rem;
-    font-size: 0.8rem;
     text-align: center;
 }
 
